X11-Include.xxxxxxxxxxxxxxxx/X11/Intrinsic.pp


function XtCvtStringToFile(para1:PDisplay; para2:TXrmValuePtr; para3:PCardinal; para4:TXrmValuePtr; para5:TXrmValuePtr; 
               para6:PXtPointer):TBoolean;cdecl;external;


function XtCvtStringToFloat(para1:PDisplay; para2:TXrmValuePtr; para3:PCardinal; para4:TXrmValuePtr; para5:TXrmValuePtr; 
               para6:PXtPointer):TBoolean;cdecl;external;


function XtCvtStringToFont(para1:PDisplay; para2:TXrmValuePtr; para3:PCardinal; para4:TXrmValuePtr; para5:TXrmValuePtr; 
               para6:PXtPointer):TBoolean;cdecl;external;


function XtCvtStringToFontSet(para1:PDisplay; para2:TXrmValuePtr; para3:PCardinal; para4:TXrmValuePtr; para5:TXrmValuePtr; 
               para6:PXtPointer):TBoolean;cdecl;external;


function XtCvtStringToFontStruct(para1:PDisplay; para2:TXrmValuePtr; para3:PCardinal; para4:TXrmValuePtr; para5:TXrmValuePtr; 
               para6:PXtPointer):TBoolean;cdecl;external;

function XtCvtStringToGravity(para1:PDisplay; para2:TXrmValuePtr; para3:PCardinal; para4:TXrmValuePtr; para5:TXrmValuePtr; 
               para6:PXtPointer):TBoolean;cdecl;external;


function XtCvtStringToInitialState(para1:PDisplay; para2:TXrmValuePtr; para3:PCardinal; para4:TXrmValuePtr; para5:TXrmValuePtr; 
               para6:PXtPointer):TBoolean;cdecl;external;


function XtCvtStringToInt(para1:PDisplay; para2:TXrmValuePtr; para3:PCardinal; para4:TXrmValuePtr; para5:TXrmValuePtr; 
               para6:PXtPointer):TBoolean;cdecl;external;


function XtCvtStringToPixel(para1:PDisplay; para2:TXrmValuePtr; para3:PCardinal; para4:TXrmValuePtr; para5:TXrmValuePtr; 
               para6:PXtPointer):TBoolean;cdecl;external;
    const
      XtCvtStringToPosition = XtCvtStringToShort;      



function XtCvtStringToRestartStyle(para1:PDisplay; para2:TXrmValuePtr; para3:PCardinal; para4:TXrmValuePtr; para5:TXrmValuePtr; 
               para6:PXtPointer):TBoolean;cdecl;external;


function XtCvtStringToShort(para1:PDisplay; para2:TXrmValuePtr; para3:PCardinal; para4:TXrmValuePtr; para5:TXrmValuePtr; 
               para6:PXtPointer):TBoolean;cdecl;external;


function XtCvtStringToTranslationTable(para1:PDisplay; para2:TXrmValuePtr; para3:PCardinal; para4:TXrmValuePtr; para5:TXrmValuePtr; 
               para6:PXtPointer):TBoolean;cdecl;external;


function XtCvtStringToUnsignedChar(para1:PDisplay; para2:TXrmValuePtr; para3:PCardinal; para4:TXrmValuePtr; para5:TXrmValuePtr; 
               para6:PXtPointer):TBoolean;cdecl;external;


function XtCvtStringToVisual(para1:PDisplay; para2:TXrmValuePtr; para3:PCardinal; para4:TXrmValuePtr; para5:TXrmValuePtr; 
               para6:PXtPointer):TBoolean;cdecl;external;



function XtCvtIntToBool(para1:PDisplay; para2:TXrmValuePtr; para3:PCardinal; para4:TXrmValuePtr; para5:TXrmValuePtr; 
               para6:PXtPointer):TBoolean;cdecl;external;


function XtCvtIntToBoolean(para1:PDisplay; para2:TXrmValuePtr; para3:PCardinal; para4:TXrmValuePtr; para5:TXrmValuePtr; 
               para6:PXtPointer):TBoolean;cdecl;external;


function XtCvtIntToColor(para1:PDisplay; para2:TXrmValuePtr; para3:PCardinal; para4:TXrmValuePtr; para5:TXrmValuePtr; 
               para6:PXtPointer):TBoolean;cdecl;external;
    const
      XtCvtIntToDimension = XtCvtIntToShort;      



function XtCvtIntToFloat(para1:PDisplay; para2:TXrmValuePtr; para3:PCardinal; para4:TXrmValuePtr; para5:TXrmValuePtr; 
               para6:PXtPointer):TBoolean;cdecl;external;


function XtCvtIntToFont(para1:PDisplay; para2:TXrmValuePtr; para3:PCardinal; para4:TXrmValuePtr; para5:TXrmValuePtr; 
               para6:PXtPointer):TBoolean;cdecl;external;


function XtCvtIntToPixel(para1:PDisplay; para2:TXrmValuePtr; para3:PCardinal; para4:TXrmValuePtr; para5:TXrmValuePtr; 
               para6:PXtPointer):TBoolean;cdecl;external;


function XtCvtIntToPixmap(para1:PDisplay; para2:TXrmValuePtr; para3:PCardinal; para4:TXrmValuePtr; para5:TXrmValuePtr; 
               para6:PXtPointer):TBoolean;cdecl;external;
    const
      XtCvtIntToPosition = XtCvtIntToShort;      



function XtCvtIntToShort(para1:PDisplay; para2:TXrmValuePtr; para3:PCardinal; para4:TXrmValuePtr; para5:TXrmValuePtr; 
               para6:PXtPointer):TBoolean;cdecl;external;


function XtCvtIntToUnsignedChar(para1:PDisplay; para2:TXrmValuePtr; para3:PCardinal; para4:TXrmValuePtr; para5:TXrmValuePtr; 
               para6:PXtPointer):TBoolean;cdecl;external;



function XtCvtColorToPixel(para1:PDisplay; para2:TXrmValuePtr; para3:PCardinal; para4:TXrmValuePtr; para5:TXrmValuePtr; 
               para6:PXtPointer):TBoolean;cdecl;external;

    const
      XtCvtPixelToColor = XtCvtIntToColor;      
{$endif}


(* error 
/* DON'T ADD STUFF AFTER THIS #endif */

implementation

    function XtNumber(arr : longint) : TCardinal;
    begin
      XtNumber:=TCardinal((sizeof(arr))/(sizeof(arr[0])));
    end;

    function XtAllEvents : TEventMask;
      begin
        XtAllEvents:=TEventMask(-(1));
      end;

    function XtIsRectObj(object : longint) : longint;
    begin
      XtIsRectObj:=_XtCheckSubclassFlag(object,TXtEnum($02));
    end;

    function XtIsWidget(object : longint) : longint;
    begin
      XtIsWidget:=_XtCheckSubclassFlag(object,TXtEnum($04));
    end;

    function XtIsComposite(widget : longint) : longint;
    begin
      XtIsComposite:=_XtCheckSubclassFlag(widget,TXtEnum($08));
    end;

    function XtIsConstraint(widget : longint) : longint;
    begin
      XtIsConstraint:=_XtCheckSubclassFlag(widget,TXtEnum($10));
    end;

    function XtIsShell(widget : longint) : longint;
    begin
      XtIsShell:=_XtCheckSubclassFlag(widget,TXtEnum($20));
    end;

    function XtIsOverrideShell(widget : longint) : longint;
    begin
      XtIsOverrideShell:=_XtIsSubclassOf(widget,TWidgetClass(overrideShellWidgetClass),TWidgetClass(shellWidgetClass),TXtEnum($20));
    end;

    function XtIsWMShell(widget : longint) : longint;
    begin
      XtIsWMShell:=_XtCheckSubclassFlag(widget,TXtEnum($40));
    end;

    function XtIsVendorShell(widget : longint) : longint;
    begin
      XtIsVendorShell:=_XtIsSubclassOf(widget,TWidgetClass(vendorShellWidgetClass),TWidgetClass(wmShellWidgetClass),TXtEnum($40));
    end;

    function XtIsTransientShell(widget : longint) : longint;
    begin
      XtIsTransientShell:=_XtIsSubclassOf(widget,TWidgetClass(transientShellWidgetClass),TWidgetClass(wmShellWidgetClass),TXtEnum($40));
    end;

    function XtIsTopLevelShell(widget : longint) : longint;
    begin
      XtIsTopLevelShell:=_XtCheckSubclassFlag(widget,TXtEnum($80));
    end;

    function XtIsApplicationShell(widget : longint) : longint;
    begin
      XtIsApplicationShell:=_XtIsSubclassOf(widget,TWidgetClass(applicationShellWidgetClass),TWidgetClass(topLevelShellWidgetClass),TXtEnum($80));
    end;

    function XtIsSessionShell(widget : longint) : longint;
    begin
      XtIsSessionShell:=_XtIsSubclassOf(widget,TWidgetClass(sessionShellWidgetClass),TWidgetClass(topLevelShellWidgetClass),TXtEnum($80));
    end;

    function XtMapWidget(widget : longint) : longint;
    begin
      XtMapWidget:=XMapWindow(XtDisplay(widget),XtWindow(widget));
    end;

    function XtUnmapWidget(widget : longint) : longint;
    begin
      XtUnmapWidget:=XUnmapWindow(XtDisplay(widget),XtWindow(widget));
    end;

    function XtUnspecifiedPixmap : TPixmap;
      begin
        XtUnspecifiedPixmap:=TPixmap(2);
      end;

    function XtUnspecifiedWindow : TWindow;
      begin
        XtUnspecifiedWindow:=TWindow(2);
      end;

    function XtUnspecifiedWindowGroup : TWindow;
      begin
        XtUnspecifiedWindowGroup:=TWindow(3);
      end;

    function XtOffset(p_type,field : longint) : TCardinal;
    begin
      XtOffset:=TCardinal((Pchar(@((Tp_type(NULL))^.field)))-(Pchar(NULL)));
    end;

    function XtOffsetOf(s_type,field : longint) : longint;
    begin
      XtOffsetOf:=offsetof(s_type,field);
    end;

    function XtMalloc(size : longint) : longint;
    begin
      XtMalloc:=_XtMalloc(size,__FILE__,__LINE__);
    end;

    function XtRealloc(ptr,size : longint) : longint;
    begin
      XtRealloc:=_XtRealloc(ptr,size,__FILE__,__LINE__);
    end;

    function XtCalloc(num,size : longint) : longint;
    begin
      XtCalloc:=_XtCalloc(num,size,__FILE__,__LINE__);
    end;

    function XtFree(ptr : longint) : longint;
    begin
      XtFree:=_XtFree(ptr);
    end;

    function XtNew(_type : longint) : Ptype;
    begin
      XtNew:=Ptype(XtMalloc(dword(sizeof(_type))));
    end;

    function XtNewString(str : longint) : longint;
    var
       if_local1 : longint;
    (* result types are not known *)
    begin
      if NULL then
        if_local1:=strcpy(XtMalloc((dword(strlen(str)))+1),str)
      else
        if_local1:=NULL;
      XtNewString:=str<>(if_local1);
    end;

    function XT_CONVERT_FAIL : TAtom;
      begin
        XT_CONVERT_FAIL:=TAtom($80000001);
      end;


end.
